--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
             href="https://fonts.googleapis.com/css?family=Inter&display=swap"
             rel="stylesheet"
         />
+        <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+        <script src="https://accounts.google.com/gsi/client" async defer></script>
+
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
